modules/installed/crimes/crimes.styles.css
/* ... */
.crime-header-holder .select-crime-header {
	margin: auto;
	justify-content: flex-end;
	flex-grow: 1;
	order:  5;
	width: 5%;
	min-width: 5%;
	max-width: 5%;
	text-align: center;
	max-height: 22px;
}

/* CRIME HOLDER */

.crime-holder {
    position: relative;
    background-color: var(--gray-lighter);
    border-bottom: 1px solid var(--gray);
	border-left: 1px solid var(--gray);
    border-right: 1px solid var(--gray);
    border-radius: 0px;
    margin-bottom: 0px;
	overflow: hidden;
}

.crime-holder .crime-holder-container {
	margin: 0px;
	display: flex;
	flex-direction: row;
	min-height: 25px;
	padding: 5px 0px 5px 0px;  
}

.crime-holder:nth-child(odd) {
  	background-color: var(--gray-light);
	background-image: url('/themes/themeBuilder/images/arches.png');
}

.crime-holder:nth-child(even) {
  	background-color: var(--gray-lighter);
	background-image: url('/themes/themeBuilder/images/arches.png');
}

.crime-holder .crime-indicator {
	display: flex;
	justify-content: center;
	flex-wrap: wrap;
	min-width: 7%;
	max-width: 7%;
	border-right: 1px dashed var(--gray);
}

.crime-holder .crime-indicator-container {
    border: 3px ridge;
	border-radius: 4px;
	box-shadow: inset 0px 0px 20px 0px rgba(0, 0, 0, 0.5);
}

.crime-holder .crime-indicator-icon {
	display: flex;
	align-items: center;
	text-shadow: 1px 1px 2px darkblue, 0 0 2px lightcoral;
	font-size: 140%;
}

.crime-holder .crime-indicator-icon-left {
	display: flex;
	align-items: center;
	text-shadow: 1px 1px 2px darkblue, 0 0 2px lightcoral;
	font-size: 130%;
	min-width: 21px;
	justify-content: center;
}

.crime-holder .crime-indicator-icon-right {
	display: flex;
	align-items: center;
	text-shadow: 1px 1px 2px darkblue, 0 0 2px lightcoral;
	font-size: 130%;
	min-width: 21px;
	justify-content: center;
}

.crime-holder .crime-text {
	margin-top: auto;
	margin-bottom: auto;
	justify-content: flex-start;
	flex-grow: 1;
	order:  2;
	width: 68%;
	min-width: 68%;
	max-width: 68%;
	font-size: 0.95em;
	padding-left: 3%;
	text-align: left;
}

/* STACKED STAT BARS */

.crime-holder .crime-stat-container {
	display: flex;
	order:  3;
	width: 20%;
	min-width: 20%;
	max-width: 20%;
	align-items: center;
    flex-wrap: nowrap;
	border-left: 1px dashed var(--gray);
	border-right: 1px dashed var(--gray);
}

.crime-holder .crime-stat-internal-container {
  	width: 65%;
	margin-right: auto;
}

.crime-holder .crime-stat-progress-bar-controller-override {
	height: 8px;
	overflow: hidden;
	margin-bottom: 3px;
	border-radius: 2px;
	background-color: rgba(0, 0, 0, 0.3);
}

.crime-holder .crime-stat-progress-bar-container {
	margin-bottom: 2px;
	height: 8px;
	min-height: 8px;
	max-height: 8px;
	border-top: 1px solid black;
	border-left: 1px solid black;
	border-bottom: 1px solid black;
	border-color: rgba(0, 0, 0, 1);
	border-radius: 0px;
}

.crime-holder .crime-stat-progress-bar-bonus-container {
	margin-bottom: 2px;
	height: 8px;
	min-height: 8px;
	max-height: 8px;
	border-top: 1px solid black;
	border-right: 1px solid black;
	border-bottom: 1px solid black;
	border-radius: 0px;
	opacity: 1;
	box-shadow: inset 0px 0px 20px 11px rgb(249 255 182), -2px 0px 3px 0px rgb(249 255 182)
}

/* BONUS */

.crime-holder .crime-bonus-distro-container {
	margin: auto;
	justify-content: flex-end;
	flex-grow: 1;
	order:  4;
	width: 10%;
	min-width: 10%;
	max-width: 10%;
	text-align: center;
	min-height: 15px;
	border-left: 1px dashed var(--gray);
	border-right: 1px dashed var(--gray);
}

.crime-holder .crime-bonus-text {
	margin: auto;
	font-size: 1em;
	font-weight: bold;
	text-shadow: 0 0 2px #000000, 0 0 2px #000000;
}

.crime-holder .crime-bonus-icon {
	width: 30%;
	font-size: 1.3em;
	font-weight: bold;
	text-shadow: 1px 1px 2px darkblue, 0 0 2px lightcoral;
}

.crime-holder .crime-bonus-distro-progress-bar-container {
	width: 50%;
    margin-left: auto;
    margin-right: auto;
	min-height: 15px;
	max-height: 15px;
	background-color: rgba(0, 0, 0, 0);
	border: 1px outset rgba(0, 0, 0, 0.3);
	border-radius:8px;
	box-shadow: 0px 1px rgb(0 0 0 / 50%);
}

.crime-holder .crime-bonus-distro-progress-bar {
	min-height: 15px;
	max-height: 15px;
	transition: none;
	border-left: 1px inset black;
	border-right: 1px inset black;
	border-color: rgba(0,0,0,0.4);
}

.crime-holder .select {
	margin: auto;
	justify-content: flex-end;
	align-items: center;
	order:  5;
	width: 5%;
	min-width: 5%;
	max-width: 5%;
	max-height: 22px;
}

.select .input {
	margin-left: auto;
    display: inherit;
    margin-right: auto;
}

/* CRIME BUTTON */

.crime-commit-holder {
    position: relative;
    margin-top: 0px;
    margin-bottom: 0px;
	overflow: hidden;
    padding: 10px 0px;
}

.crime-button-background {
	position: relative;
    margin-top: 3px;
	padding: 0px 0px 0px 0px;  
    background-color: var(--gray-lighter);
    border: 1px solid transparent;
	border-radius: 4px;
	border-color: rgba(0,0,0,0.3);
	background-image: url('/themes/themeBuilder/images/dark-circles.png');
}

.btn-crime-commit {
	background-color: var(--gray-light);
	padding: 10px 50px;
	border-radius: 8px;
	background-image: url('/themes/themeBuilder/images/arches.png');
}

.btn-crime-commit:hover,
.btn-crime-commit:active,
.btn-crime-commit:focus,
.btn-crime-commit.active {
  /* let's darken #004E64 a bit for hover effect */
  background: var(--gray-dark);
  color: var(--gray-lighter);
  border-color: #003D4F;
  background-image: url('/themes/themeBuilder/images/arches.png');
}

/* CRIME COMMITTED */

.crime-committed-heading {
	margin: auto;
	padding: 15px 15px 15px 15px;
    border-bottom: 1px solid transparent;
    border-top-left-radius: 3px;
    border-top-right-radius: 3px;  
	display: flex;
	justify-content: center;
	text-align: center;
  	align-items: flex-end;
	font-size: 1.25em;
	font-weight: normal;
}
/* ... */

